staging/ControllerService-dpl.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: controller-service-v1
# namespace: cepstralinstruments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: controller-service
  template:
    metadata:
      labels:
        app: controller-service
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: controller-service-account
      containers:
        - name: controller-service
          image: gcr.io/samplergan/controller-service:latest
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
