staging/FeatureEngineering-dpl.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: feature-engineering
# namespace: cepstralinstruments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: feature-engineering
  template:
    metadata:
      labels:
        app: feature-engineering
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: bucket-service-account
      containers:
        - name: feature-engineering
          image: gcr.io/samplergan/feature-engineering:latest
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
