staging/GanService-dpl.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: gan-service-v1
# namespace: cepstralinstruments
spec:
  replicas: 3
  selector:
    matchLabels:
      app: gan-service
  template:
    metadata:
      labels:
        app: gan-service
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: controller-service-account
      containers:
        - name: gan-service
          image: gcr.io/samplergan/gan-service:latest
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
