staging/IngestionService-dpl.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ingestion-service-v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ingestion-service
  template:
    metadata:
      labels:
        app: ingestion-service
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: bucket-service-account
      containers:
        - name: ingestion-service
          image: gcr.io/samplergan/ingestion-service:latest
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
