staging/TestContainer1-dpl.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-container-1-deployment
# namespace: cepstralinstruments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-container-1
  template:
    metadata:
      labels:
        app: test-container-1
    spec:
      containers:
        - name: test-container-1
          image: gcr.io/samplergan/test-container-1:latest
          ports:
            - containerPort: 22
              name: ssh
