staging/TestContainer3-dpl.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: test-container-3-deployment
# namespace: cepstralinstruments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: test-container-3
  template:
    metadata:
      labels:
        app: test-container-3
    spec:
      containers:
        - name: test-container-3
          image: gcr.io/samplergan/test-app-3:latest
          ports:
            - containerPort: 22
              name: ssh
