staging/TrainingScheduler-dpl.yaml
# This file configures the hello-world app which serves public web traffic.
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: training-scheduler
# namespace: cepstralinstruments
spec:
  replicas: 1
  selector:
    matchLabels:
      app: training-scheduler
  template:
    metadata:
      labels:
        app: training-scheduler
    spec:
      containers:
        - name: training-scheduler
          image: gcr.io/samplergan/training-scheduler:latest
