staging/TestContainer2-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: test-container-2-service
#  namespace: cepstralinstruments
spec:
  type: ClusterIP
  selector:
    app: app
  ports:
    - port: 80
      targetPort: 80
      name: http
