staging/TrainingScheduler-srv.yaml
kind: Service
apiVersion: v1
metadata:
  name: training-scheduler-service
spec:
  type: NodePort
  selector:
    app: training-scheduler
  ports:
    - port: 5007
