staging/rabbitmq-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbit-mq-service
spec:
  type: LoadBalancer
  clusterIP: 10.27.240.87
  externalTrafficPolicy: Cluster
  ports:
    - port: 5672
      name: rabbit-tcp
    - port: 15672
      name: rabbit-http
  selector:
    app: rabbit-mq
