staging/sql-proxy-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: sqlproxy-service-database1
spec:
  ports:
  - port: 5432
    targetPort: port-database1
  selector:
    app: cloudsqlproxy
