staging/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: main-ingress
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: training-scheduler
          servicePort: 5007
